--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p>During my design journey, I have developed a keen interest for graphic design, content creation and user experience design.
           <br />My aim is always to create positive experiences for users by finding and understanding the problem, solving it and create design solutions that is based on their needs.
             </p>
-            <b>If you have something to share or you would like to know more, link me:</b>
+            <b>If you have something to share or just want to talk, link me:</b>
             <div>
               <br />
     <a href="https://www.linkedin.com/in/amritdesigner/"/>
