--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
     	<div class="about-container">
         <div class="about-item"><div class = "about-text">
-        <div class= "name">Amrit Singh</div><h2>Digital Designer / Content Strategist</h2>
+        <div class= "name">Amrit Singh</div><h2>Designer</h2>
           <p>During my design journey, I have developed a keen interest for graphic design, content creation and user experience design.
           <br />My aim is always to create positive experiences for users by finding and understanding the problem, solving it and create design solutions that is based on their needs.
             </p>
